--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,25 @@
 version: '3.3'
 services:
-
+  db:
+    image: postgres:12.4
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  backend:
+    build:
+      context: ../backend/foodgram/
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - static_value:/backend/static_django/
+      - media_value:/backend/media/
+    depends_on:
+      - db
+    links:
+      - db:db
+    env_file:
+      - ./.env
   frontend:
     build:
       context: ../frontend
@@ -13,6 +32,15 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/static/
+      - media_value:/media/
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    depends_on:
+      - backend
+      - frontend
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
