--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,7 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
+    server_tokens off;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -17,5 +19,24 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/api/v1/;
+    }
 
+    location /media/ {
+      autoindex on;
+      alias /media/;
+    }
+
+    location /static/admin/ {
+      autoindex on;
+      alias /static/admin/;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
 }
