--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,11 +21,9 @@ services:
     env_file:
       - ./.env
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: stromex/foodgram-frontend
     volumes:
-      - ../frontend/:/app/result_build/
+      - frontend_data:/app/result_build/
   nginx:
     image: nginx:1.19.3
     ports:
@@ -41,6 +39,7 @@ services:
       - backend
       - frontend
 volumes:
+  frontend_data:
   postgres_data:
   static_value:
   media_value:
