--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -46,5 +46,6 @@ jobs:
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2
       with:
+        context: ./backend/foodgram
         push: true
         tags: stromex/foodgram-backend:latest
