--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -43,12 +43,18 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }} 
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Push to Docker Hub
+    - name: Push backend to Docker Hub
       uses: docker/build-push-action@v2
       with:
         context: ./backend
         push: true
         tags: stromex/foodgram-backend:latest
+    - name: Push frontend to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        context: ./frontend
+        push: true
+        tags: stromex/foodgram-frontend:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
@@ -64,8 +70,10 @@ jobs:
           script: |
             cd foodgram-react-django/
             sudo docker pull stromex/foodgram-backend:latest
+            sudo docker pull stromex/foodgram-frontend:latest
             sudo docker-compose stop
             sudo docker-compose rm backend
+            sudo docker-compose rm frontend
             # Создаст файл для переменных окружения
             touch .env 
             # Наполнит файл переменными окружения из секретов GitHub
