--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -21,7 +21,7 @@ services:
   frontend:
     image: stromex/foodgram-frontend:latest
     volumes:
-      - ./frontend:/app/result_build/
+      - ../frontend:/app/result_build/
   nginx:
     image: nginx:1.19.3
     ports:
@@ -30,9 +30,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_value:/static/
       - media_value:/media/
-      - ./frontend/build:/usr/share/nginx/html/
-      - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
     depends_on:
       - backend
       - frontend
